systemd System and Service Manager

CHANGES WITH 259 in spe:

        * homectl's --recovery-key= option may now be used with the "update"
          command to add recovery keys to existing user accounts. Previously,
          recovery keys could only be configured during initial user creation.

CHANGES WITH 258:

        Incompatible changes:

        * Support for cgroup v1 ('legacy' and 'hybrid' hierarchies) has been
          removed. cgroup v2 ('unified' hierarchy) will always be mounted
          during system bootup and systemd-nspawn container initialization.

        * The minimum kernel baseline version has been bumped to v5.4 (released
          in 2019), with the recommended version now going up to v5.7. Consult
          the README file for a list of required kernel APIs.

        * The default access mode of tty/pts device nodes has been changed to
          0600, which was 0620 in the older releases, due to general security
          concerns about terminals being written to by other users. To restore
          the old default access mode, use the '-Dtty-mode=0620' meson build
          option. (This effectively means "mesg n" is now the default, rather
          than "mesg y", see mesg(1) man page for help.)

        * ACLs for device nodes requested by "uaccess" udev tag are now always
          applied/updated by systemd-udevd through "uaccess" udev builtin, and
          systemd-logind no longer applies/updates ACLs but triggers "change"
          uevents to make systemd-udevd apply/update ACLs. Hence, the "uaccess"
          udev tag should be set not only on "add" action but also on "change"
          action, and it is highly recommended that the rule is applied all
          actions except for "remove" action.
          Recommended example:
              ACTION!="remove", SUBSYSTEM=="hidraw", TAG+="uaccess"
          The following example does not work since v258:
              ACTION=="add", SUBSYSTEM=="hidraw", TAG+="uaccess"